# pdf_extractor

./: .gitignore  UI_PARSING_GUIDE.md  leapcell.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  limiter.py
app/services/: extractor.py
tests/: test_extractor_resume.py  test_limiter.py
