[project]
name = "pdf-extractor"
version = "0.1.0"
requires-python = ">=3.14.5,<3.15"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httptools>=0.6.0,<1.0.0",
    "orjson>=3.10.0,<4.0.0",
    "pdfminer.six>=20231228",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "uvloop>=0.19.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
compile-bytecode = true
